--- a/#src/scss/pages/home.scss
+++ b/#src/scss/pages/home.scss
@@ -2,7 +2,7 @@
 @import "../abstracts/variables";
 
 .main-screen {
-  margin: 90px 0 80px 0;
+  margin: 40px 0 80px 0;
   @media (max-width: $breakpoint-lg) {
     margin: 60px 0 50px 0;
   }
@@ -14,8 +14,8 @@
   }
   & h1 {
     text-align: center;
-    font-size: 64px;
-    margin-bottom: 86px;
+    font-size: 58px;
+    margin-bottom: 46px;
     font-family: 'CircularStd', sans-serif;
     @media (max-width: $breakpoint-lg) {
       font-size: 40px;
