--- a/#src/scss/pages/other.scss
+++ b/#src/scss/pages/other.scss
@@ -4,13 +4,13 @@
 .about {
   margin-bottom: 100px;
   &__heading {
-    margin: 100px 0 80px 0;
+    margin: 50px 0 40px 0;
     font-size: 54px;
     text-align: center;
     width: 100%;
     @media (max-width: $breakpoint-lg) {
       font-size: 34px;
-      margin: 60px 0 50px 0;
+      margin: 40px 0 30px 0;
     }
     @media (max-width: $breakpoint-md) {
       font-size: 24px;
