--- a/allstar/css/style.css
+++ b/allstar/css/style.css
@@ -1073,7 +1073,7 @@ input[type=number] {
 }
 
 .main-screen {
-  margin: 90px 0 80px 0;
+  margin: 40px 0 80px 0;
 }
 
 .main-screen .row {
@@ -1085,8 +1085,8 @@ input[type=number] {
 
 .main-screen h1 {
   text-align: center;
-  font-size: 64px;
-  margin-bottom: 86px;
+  font-size: 58px;
+  margin-bottom: 46px;
   font-family: 'CircularStd', sans-serif;
 }
 
@@ -1237,7 +1237,7 @@ input[type=number] {
 }
 
 .blog__heading {
-  margin: 100px 0 80px 0;
+  margin: 50px 0 40px 0;
   font-size: 54px;
   text-align: center;
   width: 100%;
@@ -1474,7 +1474,7 @@ input[type=number] {
 }
 
 .about__heading {
-  margin: 100px 0 80px 0;
+  margin: 50px 0 40px 0;
   font-size: 54px;
   text-align: center;
   width: 100%;
@@ -2046,7 +2046,7 @@ input[type=number] {
 
   .blog__heading {
     font-size: 34px;
-    margin: 60px 0 50px 0;
+    margin: 40px 0 30px 0;
   }
 
   .blog__sidebar {
@@ -2059,7 +2059,7 @@ input[type=number] {
 
   .about__heading {
     font-size: 34px;
-    margin: 60px 0 50px 0;
+    margin: 40px 0 30px 0;
   }
 
   .about__content {
